# IA-para-estacionamentos.

./: README.md  pyproject.toml
src/detector_vagas/: main.py
tests/: test_main.py
