[tool.poetry]
name = "detector-vagas"
version = "0.1.0"
description = ""
authors = ["CaioBonvicine <caiopbonvicine@gmail.com>"]
readme = "README.md"
packages = [{ include = "detector_vagas", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"
ultralytics = ">=8.3.178,<9.0.0"
opencv-python = ">=4.12.0.88,<5.0.0.0"
pathlib = ">=1.0.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
detector_vagas = "detector_vagas.main:main"
